# sftpx

./: .gitignore  ARCHITECTURE.md  CHUNKING_IMPLEMENTATION.md  Cargo.toml  FILE_TRANSFER_GUIDE.md  FIXES.md  INSTALL.md  MIGRATION_HEARTBEAT.md  PARALLELISM.md  PUBLISHING.md  QUICKSTART.md  README.md  RESUME_IMPLEMENTATION.md  TESTING.md  TESTING_RESUME.md  USAGE.md  VERIFICATION.md  build.rs  cert.pem  generate_certs_with_ip.sh  key.pem  quick_test.sh  test.sh  test_all_types.sh  test_server.sh
benches/: chunking_bench.rs  hash_bench.rs  serialization_bench.rs  transfer_bench.rs
certs/: README.md  cert.pem  key.pem  openssl.cnf
config/: client.toml  server.toml
docs/: chunk_bitmap.md  chunk_compression.md  chunk_table.md  chunking.md  chunking_module.md  client_config.md  server_usage.md  testing.md  user_guide.md
examples/: bitmap_usage.rs  chunk_table_usage.rs  chunk_test.rs  client_download.rs  client_upload.rs  complete_chunking_pipeline.rs  compression_pipeline.rs  custom_progress.rs  file_server.rs  file_transfer_client.rs  file_transfer_server.rs  integrated_file_transfer_client.rs  integrated_file_transfer_server.rs  realistic_compression_test.rs  resumable_transfer.rs  server_daemon.rs  simple_client.rs  simple_receive.rs  simple_send.rs  test_client.rs  test_file_compression.rs  test_server.rs
flatbuffers/: bitmap.fbs  chunk_data.fbs  manifest_table.fbs
proto/: bitmap.proto  chunk.proto  common.proto  control.proto  manifest.proto  resume.proto  session.proto  status.proto  transfer.proto
scripts/: README.md  bench.sh  gen_certs.ps1  gen_certs.sh  run_tests.sh
src/: chunk.rs  compression.rs  lib.rs  main.rs
src/chunking/: bitmap.rs  chunker.rs  compress.rs  dedup.rs  hasher.rs  mod.rs  parallel.rs  table.rs
src/cli/: mod.rs  progress.rs  recv.rs  send.rs  status.rs
src/client/: connection.rs  mod.rs  receiver.rs  sender.rs  session.rs  streams.rs  transfer.rs
src/common/: cert_gen.rs  config.rs  mod.rs  (+3 more)
tests/: chaos_test.rs  chunk_compression.rs  chunk_validation_test.rs  disconnect_test.rs  large_file_test.rs  manifest_test.rs  protocol_test.rs  resume_integration.rs  resume_test.rs  server_test.rs  small_file_test.rs
tmp/: bincreator.py
uploads/: .upload_1763251677.bitmap
(+55 files in other folders)
