[package]
name = "sftpx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
clap = { version = "4.5.51", features = ["derive"] }
hex = "0.4.3"
lz4_flex = { version = "0.12.0", default-features = false }
prost = "0.14.1"
prost-types = "0.14.1"
zstd = "0.13.3"

[build-dependencies]
prost-build = "0.14.1"

[features]
disable_pb = []

