[package]
name = "sftpx"
version = "0.1.0"
edition = "2021"

[dependencies]
# QUIC transport
quiche = "0.24.6"

# Cryptography
ring = "0.17"
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protocol buffers
prost = "0.13"
bytes = "1.8"

# FlatBuffers
flatbuffers = "24.12"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Progress bars
indicatif = "0.17"

# Async runtime (optional, for future async implementation)
# tokio = { version = "1", features = ["full"] }

[build-dependencies]
prost-build = "0.13"
flatc-rust = "0.2"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "sftpx"
path = "src/main.rs"

[lib]
name = "sftpx"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
